fixed all minor alignment issue, fixed the wie margin, fixed responsive

--- a/src/components/wie-about/wieAbout.style.css
+++ b/src/components/wie-about/wieAbout.style.css
@@ -1,12 +1,4 @@
-@import "https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
-@import "https://fonts.googleapis.com/css?family=Sacramento";
-@import "https://fonts.googleapis.com/css?family=Lato:300,900";
-@import "https://fonts.googleapis.com/css2?family=Lilita+One&family=Salsa&display=swap";
-@import "https://fonts.googleapis.com/css2?family=Sacramento&display=swap";
 body {
-  background-color: white;
-  margin: 0;
   font-family: Josefin Sans, sans-serif;
 }
 
@@ -15,7 +7,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-button {
@@ -53,10 +45,10 @@ body {
 }
 
 .WieAbout {
-  margin: 40px;
+  margin: 40px auto;
   padding: 0;
-  margin-left: 10px;
-  margin-right: 10px;
+ 
+  max-width: 85%;
 }
 
 .WieAboutContent {
@@ -67,7 +59,7 @@ body {
 }
 
 .WieAboutPhoto img {
-  width: 300px;
+  width: 280px;
 }
 
 .WieAboutContent p {
