--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Tera:wght@100..900&display=swap');
+@import "https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
+@import "https://fonts.googleapis.com/css?family=Sacramento";
+@import "https://fonts.googleapis.com/css?family=Lato:300,900";
+@import "https://fonts.googleapis.com/css2?family=Lilita+One&family=Salsa&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Sacramento&display=swap";
 
 *::selection{
   background-color: rgb(104, 120, 132);
@@ -7,6 +13,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
